Added Redis and Payment Service